--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,10 @@ envlist = py27
 [testenv]
 passenv = CODECOV_TOKEN
 commands =
-    py.test
+    coverage run --source my_package {envbindir}/py.test
+    coverage report
     codecov
 deps =
     pytest
+    coverage
     codecov
