do coverage xml before

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ passenv = CODECOV_TOKEN
 commands =
     coverage run --source my_package {envbindir}/py.test
     coverage report
+    coverage xml
     codecov
 deps =
     pytest
